# mnist-ML-learning-model

./: Cargo.toml  README.md
ML-saves/: 3-layers.json  4-layers.json  BigReader90.json  Mr97.89.json  first-attempt.json  gradiant-1.json  gradiant-2.json  gradiant-3.json  gradiant-5.json  gradiant-6.json  model.json  second-attempt.json  third-attempt.json
ML-saves/Parameter-test/: no-mod.json
src/: main.rs
