[package]
name = "antonlen-task-18"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
mnist = "0.6.0"
ndarray = { version = "0.17.2", features = ["serde"] }
ndarray-rand = "0.16.0"
rand = "0.10.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
